# reproduce_problem_upgrading_pytest_snapshot

./: pyproject.toml
tests/: test_snapshot_assertion.py
