[tool.poetry]
name = "temp2"
version = "0.1.0"
description = ""
authors = ["Matthew Shafer <matthew.shafer@ni.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-snapshot = "0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
